--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="conteiner">
                 <div class="header_body">
                     <a href="#" class="header_logo">
-                        <img src="img/logo2.png" alt=""  >
+                        <img src="css/img/logo2.png" alt=""  >
                     </a>
                     <div class="header_burger">
                         <span></span>
@@ -57,8 +57,8 @@
                 <div class="specialize_cards">
                     <div class="card">
                         <div class="top_card">
-                            <img class="icon_card" src="img/menu4.png" alt="">
-                            <img class="icon_foto" src="img/card4.jpg" alt="">
+                            <img class="icon_card" src="css/img/menu4.png" alt="">
+                            <img class="icon_foto" src="css/img/card4.jpg" alt="">
                         </div>
                         <div class="bottom_card">
                             <p class="first_p">Висококачественые <br>
@@ -67,8 +67,8 @@
                     </div>
                     <div class="card">
                         <div class="top_card">
-                            <img class="icon_card" src="img/printer.png" alt="">
-                            <img class="icon_foto" src="img/mmm.jpg" alt="">
+                            <img class="icon_card" src="css/img/printer.png" alt="">
+                            <img class="icon_foto" src="css/img/mmm.jpg" alt="">
                         </div>
                         <div class="bottom_card">
                             <p class="first_p">Висококачественые <br>
@@ -77,8 +77,8 @@
                     </div>
                     <div class="card">
                         <div class="top_card">
-                            <img class="icon_card" src="img/color-palette.png" alt="">
-                            <img class="icon_foto" src="img/card6.jpg" alt="">
+                            <img class="icon_card" src="css/img/color-palette.png" alt="">
+                            <img class="icon_foto" src="css/img/card6.jpg" alt="">
                         </div>
                         <div class="bottom_card">
                             <p class="first_p">Висококачественые <br>
@@ -87,8 +87,8 @@
                     </div>
                     <div class="card">
                         <div class="top_card">
-                            <img class="icon_card" src="img/design.png" alt="">
-                            <img class="icon_foto" src="img/card7.jpg" alt="">
+                            <img class="icon_card" src="css/img/design.png" alt="">
+                            <img class="icon_foto" src="css/img/card7.jpg" alt="">
                         </div>
                         <div class="bottom_card">
                             <p class="first_p">Висококачественые <br>
