--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="services_cards">
                             <div class="services_card">
                                 <div class="top_serv_card">
-                                    <img src="/css/img/photo-camera.png" alt="">
+                                    <img src="css/img/photo-camera.png" alt="">
                                 </div>
                                 <div class="bottom_serv_card">
                                     <h4>Фотографическая точность печати</h4>
@@ -127,7 +127,7 @@
 
                             <div class="services_card">
                                 <div class="top_serv_card">
-                                    <img src="/css/img/pen.png" alt="">
+                                    <img src="css/img/pen.png" alt="">
                                 </div>
                                 <div class="bottom_serv_card">
                                     <h4>Индивидуальный подход к клиентам</h4>
@@ -138,7 +138,7 @@
 
                             <div class="services_card">
                                 <div class="top_serv_card">
-                                    <img src="/css/img/placeholder.png" alt="">
+                                    <img src="css/img/placeholder.png" alt="">
                                 </div>
                                 <div class="bottom_serv_card">
                                     <h4>Большой цех с новейшим оборудыванием</h4>
