--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/aboutUs.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/slide.css">
+    <link rel="stylesheet" href="css/certificate.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
                     <nav class="header_menu">
                         <ul class="header_list">
                            <li><a href="#" class="header_link about_us_button ">Про нас</a></li>
-                           <li><a href="#" class="header_link">Новини</a></li>
+                           <li><a href="#" class="header_link certif"> Довідка</a></li>
                            <li><a href="#" class="header_link cont">Контакти</a></li>
                            <li><a href="#" class="header_link registr"> <i class="fas fa-sign-in-alt"></i> Увійти</a>  </li>
                         </ul>
@@ -531,6 +532,148 @@
 
             </section> 
         </main>
+
+
+
+        <main class="certificate" style="display: none ;">
+            <section>
+                <div class="wrapper">
+                    <div class="menu_certific">
+                        <span class="menu_link link1 activ_link"> Вимоги до макетів </span><span>|</span> 
+                        <span class="menu_link link2"> Разработка дизайна </span><span>|</span> 
+                        <span class="menu_link link3"> Терміни виготовлення продукції </span><span>|</span> 
+                        <span class="menu_link link4"> Оплата </span> 
+                    </div>
+                    <div class="menu1">
+                        <div class="menu_blok">
+                            <h2>
+                                ВИМОГИ ДО МАКЕТІВ
+                            </h2>
+                            <div class="blok_info">
+                                <p>
+                                    При невиконанні вимог макет вважається некоректно підготовленим та не пройде автоматичної перевірки.
+                                </p>
+                                <p>
+                                    Дотримуючись наших рекомендацій, ви зможете уникнути більшості помилок при підготовці файлів для друку.
+                                    Цим ви заощадите собі час та гроші. А також отримайте якісну продукцію, яка буде відповідати всім вашим очікуванням та потребам.
+                                </p>
+                                <p>
+                                    При додаванні нових видів виробів до нашого магазину, ми додаватимемо і специфічні вимоги, залежно від виду виробу.
+                                    Тому, при підготовці будь-якого виробу, уважно читайте технічні вимоги до макетів саме для нього.
+                                </p>
+                                <p>
+                                    Якщо ви сумніваєтеся у правильності вашого макета і хочете, щоб його перевірили наші технічні фахівці, виберіть “Підготовка макета до друку”.
+                                    Якщо у вас немає готового дизайну, ви також можете замовити його, вибравши "Потрібен дизайн, замовити".
+                                </p>
+                                <h3>
+                                    Загальні вимоги до макетів
+                                </h3>
+
+                                <ul>
+                                    <li class="li_menu"> Колірна модель — CMYK</li>
+                                    <li class="li_menu"> Роздільна здатність файлу - 300 dpi</li>
+                                    <li class="li_menu"> Макети приймаються у форматах *.jpg, *.tiff, *.pdf</li>
+                                    <li class="li_menu"> При використанні формату *.pdf перекладати шрифти в криві</li>
+                                    <li class="li_menu"> При використанні формату *.tiff зливати шари та використовувати LZW стиснення</li>
+                                    <li class="li_menu"> При використанні формату *.jpg вибирати максимальну якість</li>
+                                </ul>
+                                <p>
+                                    За наявності рамок у макеті похибка різання може вплинути на симетричність виробу.
+                                    Розмір готового виробу відрізняється від замовленого на ±1 мм.
+                                </p>
+                                <p>
+                                    У макеті з кожної сторони має бути додано по 2 мм на різання (3 мм під висікання) від розміру готового виробу незалежно від компонування виробу на друкованому аркуші.
+                                    Від краю різу до елементів зображення, які не повинні зарізатися, має бути відстань не менше ніж 3 мм.
+                                </p>
+                                <p>
+                                    Багатосторінкові брошури обрізаються із трьох сторін по 3 мм. При пружинній обкладинці відстань від краю листа до значних елементів має бути не менше 12 мм за перфорацією. 
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="menu2" style="display:none ;">
+                        <div class="menu_blok">
+                            <h2>
+                                ДИЗАЙН І ПІДГОТОВКА МАКЕТІВ ДО ДРУКУ
+                            </h2>
+                            <div class="blok_info">
+                                <p>
+                                    Якщо ви хочете надрукувати поліграфічну продукцію, але у вас немає макета, Арт-Прес з радістю надасть графічні руки для вирішення цього завдання.
+                                    Наші дизайнери розробляють макети лише за умови друку в Акцепт Принт.
+                                </p>
+                                <h3>
+                                    Алгоритм взаємодії 
+                                </h3>
+                                <ul>
+                                    <li class="li_menu">
+                                        Замовник надає текст в електронному вигляді, графічні ресурси для розміщення на макеті (логотип, елементи фірмового стилю),
+                                        за бажанням приклади або ескізи макета, описує необхідну візуалізацію макета.
+                                    </li>
+                                    <li class="li_menu">
+                                        Дизайнер обробляє запит, зв'язується із замовником та погоджує один із запропонованих планів дій:
+                                    </li>
+                                    <ul>
+                                        <li class="li_menu" >
+                                            Розробка 1 варіанта макета та 2 ітерації внесення правок.
+                                        </li>
+                                        <li class="li_menu">
+                                            Розробка 2 варіантів макета та 1 ітерація доопрацювань обраного замовником варіанта.
+                                        </li>
+                                    </ul>
+                                </ul>
+                                <p>
+                                    Загальна кількість ітерацій для одного макету обмежена трьома. Кожна наступна редагування додасть 50% до вартості розробки дизайну. 
+                                </p>
+                                <ul>
+                                    <li class="li_menu">
+                                        Відповідно до обраного плану та побажань дизайнер розробляє макет та вносить коригування на прохання замовника. Обговорення макетів відбувається електронною поштою.
+                                    </li>
+                                    <li class="li_menu">
+                                        За фактом письмового затвердження макета дизайнер передає його до друку та відправить оригінал макета та файл для друку замовнику.
+                                    </li>
+                                </ul>
+                                <p>
+                                    У вартість дизайну стандартного виробу входить:
+                                </p>
+                                <ul>
+                                    <li class="li_menu">Добір шрифтів.</li>
+                                    <li class="li_menu">Підбір зображень в інтернеті або вставляння зображень, наданих замовником.</li>
+                                    <li class="li_menu">Невеликі правки у зображеннях (вирізати біле тло, легка ретуш).</li>
+                                </ul>
+                                <p>
+                                    Вартість дизайну підвищиться, якщо потрібне трудомістке коригування або малювання зображень. 
+                                    У цьому випадку дизайнер погоджує коригування та їх вартість із замовником перед їх виконанням.
+                                </p>
+                                <h3>Що таке підготовка до друку?</h3>
+                                <p>
+                                    Якщо перевірка макету на сайті виявить невідповідність вашого макету одному або декільком вимогам до друку, 
+                                    наші дизайнери підкоригують завантажений макет згідно з технічними вимогами та надішлють вам на погодження електронною поштою.
+                                </p>
+                                <h3>Макет надійде до друку лише після вашого письмового затвердження.</h3>
+                                <p>
+                                    Вартість підготовки до друку підвищиться, якщо:
+                                </p>
+                                <ul>
+                                    <li class="li_menu">Mакет имеет плохое разрешение без возможности повышения качества изображений</li>
+                                    <li class="li_menu">Pазмер макета значительно отличается от требуемого.</li>
+                                </ul>
+                                <p>
+                                    Дизайнер погодить з вами актуальну вартість коригування, виходячи з необхідного часу. У цьому випадку застосовуються алгоритм та умови розробки макетів.
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </section>
+        </main>
+
+
+
+
         
         <footer>
             <div class="wrapper">
@@ -649,6 +792,7 @@
     <script src="js/app.js"></script>
     <script src="js/card-ptint.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/certific.js"></script>
     <script src="js/img-carus.js"></script>
 </body>
 </html>
