--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                                     Якщо перевірка макету на сайті виявить невідповідність вашого макету одному або декільком вимогам до друку, 
                                     наші дизайнери підкоригують завантажений макет згідно з технічними вимогами та надішлють вам на погодження електронною поштою.
                                 </p>
-                                <h3>Макет надійде до друку лише після вашого письмового затвердження.</h3>
+                                <h3>Макет надійде до друку лише після вашого  письмового затвердження</h3>
                                 <p>
                                     Вартість підготовки до друку підвищиться, якщо:
                                 </p>
@@ -666,6 +666,71 @@
                         </div>
 
                     </div>
+
+                    <div class="menu3" style="display:none ;">
+                        <div class="menu_blok">
+                            <h2>ТЕРМІНИ ВИГОТОВЛЕННЯ ПРОДУКЦІЇ</h2>
+                            <div class="blok_info">
+                                <p>Внести зміни на замовлення (тираж, термін, матеріал) можна до запуску продукції до друку. </p>
+                                <p> 
+                                    Про запуск до друку ми повідомимо вас за допомогою повідомлення на електронну пошту, через яку було оформлено замовлення. 
+                                    У повідомленні вказано дату готовності та спосіб доставки продукції. Якщо ви плануєте змінити спосіб доставки, повідомте нам про це. 
+                                    Ви отримаєте повідомлення про внесення змін до вашого замовлення.
+                                </p>
+                                <p>
+                                    Ми дотримуємося термінів виготовлення продукції.
+                                </p>
+                                <p>
+                                    Оформляючи замовлення через сайт, ви бачите точну дату видачі продукції зі складу друкарні. 
+                                    Ці дати дотримуються за умови оформлення та оплати замовлення до 17:00.
+                                </p>
+                                <p>
+                                    У разі форс-мажору умови та терміни видачі продукції узгоджуються із замовником. Є можливість повернути оплату, якщо замовлення не пішло до друку.
+                                </p>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="menu4" style="display:none ;">
+                        <div class="menu_blok">
+                            <h2>ОПЛАТА</h2>
+                            <div class="blok_info">
+                                <p>
+                                    Для запуску продукції до друку необхідна 100% передоплата. Оплатити замовлення ви можете зручним для вас способом:
+                                </p>
+                                <ul>
+                                    <li class="li_menu"> Готівкою у будь-якому терміналі.</li>
+                                    <li class="li_menu"> Через інтернет-банкінг Приват 24 або зручніший вам.</li>
+                                </ul>
+                                <p>
+                                    Обов'язково вказуйте у призначенні платежу номер замовлення або ім'я замовника для прив'язки платежу до замовлення.
+                                </p>
+                                <p>
+                                    Якщо замовлення ще не надійшло у виробництво, при його скасуванні ми повернемо 100% оплачених коштів на банківську картку або розрахунковий рахунок, з якого надійшла оплата.
+                                    Після початку виробництва ми не зможемо повернути кошти.
+                                </p>
+                                <p>
+                                    Для підтвердження оплати при вирішенні проблемних питань (вам не надійшло повідомлення про зарахування оплати) необхідно надіслати скан/фотографію чека або платіжного доручення залежно від способу оплати.
+                                </p>
+                                <h3>Важливо знати </h3>
+                                <p>
+                                    Продукція друкується та видається лише після надходження оплати на наш рахунок. Дата зарахування оплати впливає термін видачі продукції.
+                                    Зважайте на дату оплати та час на зарахування коштів при розрахунку необхідної дати отримання готової продукції.
+                                </p>
+                                <p>
+                                    Оплата зараховується автоматично, якщо ви переказуєте кошти через web-інтерфейс. 
+                                    При оплаті іншим способом оплата зараховується з 9:00 до 17:00 у робочі дні з інтервалом перевірки надходження коштів на 30 хвилин.
+                                </p>
+                                <p>
+                                    Якщо при оплаті замовлення ви не залишили коментар з номером замовлення або П.І.Б. замовника, необхідно повідомити нашого бухгалтера про вчинений платеж. 
+                                    Якщо ми не зможемо ідентифікувати вашу оплату через відсутність інформації, дату виробництва буде зсунуто до моменту підтвердження оплати.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
             </section>
