--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/aboutUs.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/slide.css">
+    <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/certificate.css">
     <title>Document</title>
 </head>
@@ -80,13 +81,44 @@
         </div>
     </main>
 
+    <main id="mainPersonalAdmin" style="display: none;">
+        <div class="personalWraper">
+            <div class="personalArea">
+                <p class="text_p">Особисті данні</p>
+                <p> 
+                    <i class="far fa-user fa-2x" name="name"></i><span id="userAdmin"> </span> 
+                </p>
+                <p>
+                    <i class="fas fa-key fa-2x"></i> <span id="keyAdmin">  </span>
+                </p>
+                
+                <button class="ExitAdmin">Вихід</button>
+            </div>
+
+        </div>
+
+        <div class="personalCard">
+            <div class="user">
+                <p ></p>
+                <p ></p>
+                <p ></p>
+            </div>
+        </div>
+    </main>
 
     <main id="mainPersonal" style="display: none;">
         <div class="personalWraper">
             <div class="personalArea">
-                <p> <i class="far fa-user fa-2x" id="user" name="name"> </i> </p>
-                <p><i class="fas fa-key fa-2x" id="key"> </i> </p>
-                <p><i class="fas fa-at fa-2x" id="at"> </i> </p>
+                <p class="text_p">Особисті данні</p>
+                <p> 
+                    <i class="far fa-user fa-2x" name="name"></i><span id="user"> </span> 
+                </p>
+                <p>
+                    <i class="fas fa-key fa-2x"></i> <span id="key">  </span>
+                </p>
+                <p>
+                    <i class="fas fa-at fa-2x"></i><span id="at"> </span> 
+                </p>
                 <button class="Exit">Вихід</button>
             </div>
 
@@ -136,7 +168,7 @@
             <section class="top_slide">
                 <div class="top_container">
                     <div><h2>ДРУКАЙ ЛЕГКО</h2></div>
-                    <div><h2>СТВОРИ СВІЙ ДИЗАЙН</h2></div>
+                    <div><h2>СТВОРИ СВІЙ ДИЗАЙН </h2></div>
                     <div>
                         <p>Замовляй по новому, швидко та зручно</p>
                     </div>
@@ -155,7 +187,7 @@
             <section class="specialize">
                 <div class="specialize_container">
                 <h3>НАЙНОВІШІ ТЕХНОЛОГІЇ ДРУКУ</h3>
-                <p>Ми створюємо дизайн будь-якої складності / Від простої візитки до логотипу та корпоративного стилю</p>
+                <p>Ми створюємо дизайн будь-якої складності | Від простої візитки до логотипу та корпоративного стилю</p>
                 <div class="specialize_cards">
                     <div class="card">
                         <div class="top_card">
@@ -251,6 +283,8 @@
                                 </div>
 
                             </div>
+
+                            
                         </div>
 
                     </div>
@@ -588,6 +622,8 @@
                                 <p>
                                     Багатосторінкові брошури обрізаються із трьох сторін по 3 мм. При пружинній обкладинці відстань від краю листа до значних елементів має бути не менше 12 мм за перфорацією. 
                                 </p>
+
+
                             </div>
                         </div>
 
